Fix overflow / broken vertical alignment in toolbar of dropdown-style elements (SrsSelector, ScaleSelector, ApplicationSwitcher) with active label

--- a/src/Mapbender/CoreBundle/Resources/public/element/mbApplicationSwitcher.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/element/mbApplicationSwitcher.scss
@@ -1,4 +1,6 @@
 .mb-element-applicationswitcher {
-    min-width: 9em;
+    .dropdown {
+        min-width: 9em;
+    }
 }
 
