--- a/src/Mapbender/CoreBundle/Resources/public/mapbender.element.srsselector.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/mapbender.element.srsselector.scss
@@ -1,3 +1,5 @@
 .mb-element-srsselector {
-  min-width: 230px;
+  .dropdown {
+    min-width: 20em;
+  }
 }
